discussion/kv_engine/172211/172211_rev35_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-33549: Refactor EPStats ctor to call reset()

Rather than setting stats to their initial values in both
the constructor and in the reset() method, make the constructor call
reset() instead.

Change-Id: Id801d6d31e6342a7182d576f9c44cfc49f7064d2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-07 14:16:33.000000000
Message: 
Patch Set 35: Patch Set 34 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-07 14:43:45.000000000
Message: 
Patch Set 35: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45077/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/stats.cc(85): error C2338: EPStats size is unexpected - have you added/removed stats? ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45077/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37865/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:605:39:
error: no viable overloaded "="
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37865/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16483/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/stats.cc:85:1: error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?" [clang-diagnostic-error]
static_assert(sizeof(EPStats) == 1640,
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16483/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/stats.cc:85:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16483/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26664/ : FAILURE

Compile error at [2022-04-07T14:40:39.913Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/stats.cc:85:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26664/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6197/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6137/ : FAILURE

Compile error at [2022-04-07T14:38:26.534Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master@2/kv_engine/engines/ep/src/stats.cc:85:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6137/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18254/ : FAILURE

Compile error at [2022-04-07T14:40:34.733Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/stats.cc:85:31:
error: static assertion failed: EPStats size is unexpected - have you added/removed stats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18254/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17349/ : FAILURE

Compile error at [2022-04-07T14:21:31.283Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/stats.cc:85:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17349/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18590/ : FAILURE

Compile error at [2022-04-07T14:39:52.207Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/stats.cc:85:31:
error: static assertion failed: EPStats size is unexpected - have you added/removed stats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18590/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19285/ : FAILURE

Compile error at [2022-04-07T14:39:29.123Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/stats.cc:85:1:
error: static_assert failed due to requirement "sizeof(EPStats) == 1640" "EPStats size is unexpected - have you added/removed stats?"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19285/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15418/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
